# w1tn3ss

./: .clang-tidy  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  README.md
examples/: CMakeLists.txt  standalone_coverage_example.cpp
samples/programs/: CMakeLists.txt  hook_test_target.c  linux_daemon.c  multi_threaded_target.c  rewind_demo_calls.c  rewind_demo_io.c  rewind_demo_memops.c  rewind_demo_million.c  runtime_injection_target.c  threadtest_demo.c
src/common/: CMakeLists.txt  platform_utils.hpp  windows_clean.hpp
src/p01s0n/: CMakeLists.txt  p01s0n.cpp  p01s0n.hpp  p01s0n_config.hpp
src/p1ll/: CMakeLists.txt  p1ll.cpp  p1ll.hpp
src/p1llx/: CMakeLists.txt  main.cpp
src/tracers/: CMakeLists.txt
src/w1analysis/: CMakeLists.txt  abi_dispatcher.cpp  abi_dispatcher.hpp  symbol_lookup.cpp  symbol_lookup.hpp
src/w1asmr/: CMakeLists.txt  arch.cpp  arch.hpp  asmr.cpp  asmr.hpp  result.hpp
src/w1base/: CMakeLists.txt  arch_spec.cpp  arch_spec.hpp  env_config.cpp  env_config.hpp  format_utils.hpp  interval.hpp  json_utils.hpp  module_identity.cpp  module_identity.hpp  parse_utils.hpp  platform_utils.hpp  signal_handler.cpp  signal_handler.hpp  stderr_write.hpp  string_utils.hpp  thread_utils.hpp  time_utils.hpp  types.hpp  uuid_format.cpp  uuid_format.hpp  windows_console.hpp
src/w1common/: CMakeLists.txt  platform_utils.hpp  windows_clean.hpp
src/w1debugger/: CMakeLists.txt  error.cpp  error.hpp  session_impl.hpp  types.hpp  w1debugger.cpp  w1debugger.hpp
src/w1dump/: CMakeLists.txt  memory_dumper.cpp  memory_dumper.hpp  process_dumper.cpp  process_dumper.hpp  register_dumper.cpp  register_dumper.hpp
src/w1formats/: CMakeLists.txt  drcov.hpp  jsonl_writer.cpp  jsonl_writer.hpp
src/w1gadget/: CMakeLists.txt  gadget_executor.cpp
src/w1h00k/: CMakeLists.txt  errors.cpp  errors.hpp  hook.cpp  hook.hpp  patcher.hpp
src/w1import/: CMakeLists.txt  import_insertion.hpp
src/w1instrument/: CMakeLists.txt  logging.hpp  preload_driver.hpp  preload_vm_session.hpp  process_instrumentor.hpp  process_tracer.hpp  self_exclude.hpp  session_manager.hpp  session_pool.hpp
src/w1monitor/: CMakeLists.txt  event_queue.hpp  module_monitor.hpp  monitor_factory.cpp  monitor_factory.hpp  thread_monitor.hpp
src/w1nj3ct/: CMakeLists.txt  error.cpp  error.hpp  w1nj3ct.cpp  w1nj3ct.hpp
src/w1replay/: CMakeLists.txt  asmr_block_decoder.cpp  asmr_block_decoder.hpp  code_source.hpp  main.cpp  module_image.cpp  module_image.hpp  module_image_lief.cpp  module_image_lief.hpp  module_source.cpp  module_source.hpp
src/w1rewind/: CMakeLists.txt
src/w1runtime/: CMakeLists.txt  memory_reader.cpp  memory_reader.hpp  module_catalog.cpp  module_catalog.hpp  module_registry.cpp  module_registry.hpp  monitor_event.hpp  process_event.hpp  process_monitor.cpp  process_monitor.hpp  process_observer.cpp  process_observer.hpp  register_capture.cpp  register_capture.hpp  stack_capture.cpp  stack_capture.hpp  thread_catalog.cpp  thread_catalog.hpp  thread_registry.cpp  thread_registry.hpp
src/w1tn3ss/: CMakeLists.txt  w1tn3ss.cpp  w1tn3ss.hpp
src/w1tool/: CMakeLists.txt  cli.hpp  main.cpp  tracer_discovery.cpp  tracer_discovery.hpp
test/: CMakeLists.txt
test/common/: test_paths.hpp
test/p1ll/: CMakeLists.txt  address_space_test.cpp  apply_test.cpp  plan_builder_test.cpp  scanner_test.cpp  test_helpers.hpp
test/w1analysis/: CMakeLists.txt  abi_dispatcher_test.cpp  symbol_lookup_test.cpp
test/w1asmr/: CMakeLists.txt  asmr_test.cpp  test_main.cpp
test/w1base/: CMakeLists.txt  interval_test.cpp
test/w1formats/: CMakeLists.txt  jsonl_writer_test.cpp
test/w1h00k/: CMakeLists.txt  arg_access_tests.cpp  import_table_tests.cpp  inline_detour_tests.cpp  inline_tests.cpp  instrument_tests.cpp  interpose_tests.cpp  memory_tests.cpp  module_match_tests.cpp  patcher_tests.cpp  reloc_tests.cpp  resolve_tests.cpp  test_paths.hpp
test/w1instrument/: CMakeLists.txt  event_router_test.cpp  instrumentation_policy_test.cpp  thread_session_simple_test.cpp  trace_session_smoke_test.cpp  vm_session_simple_test.cpp
test/w1monitor/: CMakeLists.txt  backend_helpers_tests.cpp  event_queue_tests.cpp  monitor_test_helpers.hpp  monitor_tests.cpp  monitor_tests_darwin.cpp  monitor_tests_linux.cpp  monitor_tests_windows.cpp  test_paths.hpp
test/w1replay/: CMakeLists.txt  gdb_adapter_test.cpp  gdb_auxv_component_test.cpp  gdb_host_process_info_test.cpp  gdb_layout_test.cpp  gdb_libraries_component_test.cpp  gdb_loaded_libraries_test.cpp  gdb_memory_map_test.cpp  gdb_memory_read_test.cpp  gdb_pc_only_test.cpp  gdb_register_info_test.cpp  gdb_run_policy_test.cpp  gdb_stepper_test.cpp  gdb_target_xml_test.cpp  gdb_value_codec_test.cpp  image_address_index_test.cpp  image_blob_provider_test.cpp  image_bytes_test.cpp  image_layout_provider_test.cpp  image_metadata_provider_test.cpp  image_path_resolver_test.cpp  memory_view_space_test.cpp  module_address_index_test.cpp  module_image_test.cpp  module_path_resolver_test.cpp  module_source_test.cpp  replay_context_test.cpp  trace_loader_test.cpp
test/w1rewind/: CMakeLists.txt  rewind_config_validation_test.cpp  rewind_flow_extractor_test.cpp  rewind_history_window_test.cpp  rewind_image_inventory_test.cpp  rewind_image_segment_utils_test.cpp  rewind_mapping_state_test.cpp  rewind_memory_filter_test.cpp  rewind_memory_map_mapping_test.cpp  rewind_minimal_trace_test.cpp  rewind_module_event_test.cpp  rewind_recorder_block_recording_test.cpp  rewind_recorder_helpers_test.cpp  rewind_recorder_recording_test.cpp  rewind_replay_checkpoint_test.cpp  rewind_replay_cursor_property_test.cpp  rewind_replay_cursor_semantics_test.cpp  rewind_replay_cursor_test.cpp  rewind_replay_instruction_cursor_test.cpp  rewind_replay_position_test.cpp  rewind_replay_run_invariants_test.cpp  (+10 more)
tests/: .clang-format  CMakeLists.txt  LINUX_TESTING_README.md  run_injection_tests.sh.in  run_linux_tests.sh  test_gadget_executor.cpp  test_injection.sh  test_linux_injection.py  test_p1ll_pattern_matching.cpp  test_standalone_tracers.cpp  test_w1cov.py  test_w1cov.sh
(+1196 files in other folders)
