# w1tn3ss Examples

# Standalone coverage example (disabled - implementation not complete)
# add_executable(standalone_coverage_example standalone_coverage_example.cpp)
# target_link_libraries(standalone_coverage_example PRIVATE w1cov)
# set_target_properties(standalone_coverage_example PROPERTIES
#     RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/examples
# )